# Guidedog

./: .gitignore  .gitmodules  README.md
catkin_ws/: command.txt
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel/include/pedsim_msgs/: AgentForce.h  AgentGroup.h  AgentGroups.h  AgentState.h  AgentStates.h  LineObstacle.h  LineObstacles.h  SocialActivities.h  SocialActivity.h  SocialRelation.h  SocialRelations.h  TrackedGroup.h  TrackedGroups.h  TrackedPerson.h  TrackedPersons.h  Waypoint.h  Waypoints.h
catkin_ws/devel/include/pedsim_simulator/: PedsimSimulatorConfig.h
catkin_ws/devel/include/pedsim_srvs/: GetAgentState.h  GetAgentStateRequest.h  GetAgentStateResponse.h  GetAllAgentsState.h  GetAllAgentsStateRequest.h  GetAllAgentsStateResponse.h  SetAgentState.h  SetAgentStateRequest.h  SetAgentStateResponse.h  SetAllAgentsState.h  SetAllAgentsStateRequest.h  SetAllAgentsStateResponse.h
catkin_ws/devel/include/pedsim_visualizer/: PedsimVisualizerConfig.h
catkin_ws/devel/include/spencer_human_attribute_msgs/: CategoricalAttribute.h  HumanAttributes.h  ScalarAttribute.h
catkin_ws/devel/include/spencer_social_relation_msgs/: SocialActivities.h  SocialActivity.h  SocialRelation.h  SocialRelations.h
catkin_ws/devel/include/spencer_tracking_msgs/: CompositeDetectedPerson.h  CompositeDetectedPersons.h  DetectedPerson.h  DetectedPersons.h  GetPersonTrajectories.h  GetPersonTrajectoriesRequest.h  GetPersonTrajectoriesResponse.h  ImmDebugInfo.h  ImmDebugInfos.h  TrackedGroup.h  TrackedGroups.h  TrackedPerson.h  TrackedPerson2d.h  TrackedPersons.h  TrackedPersons2d.h  TrackingTimingMetrics.h
catkin_ws/devel/include/spencer_vision_msgs/: PersonImage.h  PersonImages.h  PersonROI.h  PersonROIs.h
catkin_ws/devel/lib/pedsim_sensors/: pedsim_obstacle_sensor  pedsim_occlusion_sensor  pedsim_people_sensor
catkin_ws/devel/lib/pedsim_simulator/: pedsim_simulator  simulate_diff_drive_robot
catkin_ws/devel/lib/pedsim_visualizer/: pedsim_visualizer_node
catkin_ws/devel/lib/pkgconfig/: guidedog_turtle.pc  pedsim.pc  pedsim_gazebo_plugin.pc  pedsim_msgs.pc  pedsim_sensors.pc  pedsim_simulator.pc  pedsim_srvs.pc  pedsim_utils.pc  pedsim_visualizer.pc  spencer_human_attribute_msgs.pc  spencer_social_relation_msgs.pc  spencer_tracking_msgs.pc  spencer_tracking_rviz_plugin.pc  spencer_vision_msgs.pc  turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_msgs.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc  world_simulations.pc
catkin_ws/devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
catkin_ws/devel/lib/turtlebot3_fake/: turtlebot3_fake_node
catkin_ws/devel/lib/turtlebot3_gazebo/: turtlebot3_drive
catkin_ws/devel/lib/turtlebot3_slam/: flat_world_imu_node
catkin_ws/src/catkin_simple/devel/: .catkin  .rosinstall
catkin_ws/src/cv_forward/: CMakeLists.txt  package.xml
catkin_ws/src/gazebo_ros_2Dmap_plugin-melodic-devel/src/: gazebo_2Dmap_plugin.cpp
catkin_ws/src/generate_data/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/src/generate_data/models/: actor_model.sdf
catkin_ws/src/generate_data/src/set_state/: CMakeLists.txt  package.xml
catkin_ws/src/generate_data/src/set_state/src/: gazebo_set_state.cpp
catkin_ws/src/planning_stack/: 2D_test.yaml  CMakeLists.txt  package.xml
catkin_ws/src/planning_stack/Map-Merge-Tool-master/: a.out  main.cpp  mapmerge.cpp  mapmerge.h
catkin_ws/src/planning_stack/config/: global_costmap_params.yaml
catkin_ws/src/planning_stack/include/: PotentialField.h
catkin_ws/src/planning_stack/launch/: 2D_map_generator.launch  Guiding_Crossing.launch  PnC_test.launch  check_in_demo.launch  check_in_map.launch  path_planner.launch  planning_test.launch
catkin_ws/src/planning_stack/maps/: 2D_inside.yaml  2D_outside.pgm  2D_outside.yaml  2D_test.pgm  2D_test.yaml  2D_test_inside.pgm  2D_test_inside.yaml  2Dmap_inside.pgm  2Dmap_inside.yaml  2Dmap_outside.yaml  demomap.pgm  demomap.yaml  map_final.yaml  out.yaml  output.pgm  output.yaml
catkin_ws/src/planning_stack/msg/: ped.msg
catkin_ws/src/planning_stack/rviz/: planning_test.rviz
catkin_ws/src/planning_stack/scenarios/: social_contexts.xml  (+5 more)
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/: CMakeLists.txt  package.xml
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/launch/: Guiding_Crossing.launch  Guiding_Crossing_empty.launch  check_in_map.launch  turtlebot3_generate_data_world.launch
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/: street02.dae
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/Component_5/: model.sdf
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/newstreet/: model.sdf
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/simplemodified/: model.sdf
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/street1/: model.config  model.sdf
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/street2/: model.sdf
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_burger/: model.config  model.sdf
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/rviz/: turtlebot3_gazebo_model.rviz
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/scripts/: generate_label.py  image_saver.py
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/src/: cv_node.cpp  get_rlocation_node.cpp  rlocation_node.cpp
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: empty.world  generate_data.world  newstreet_4blocks.world  streettest.world  streettest3.world  turtlebot3_world.world  world01.world
catkin_ws/src/world_simulations/: CMakeLists.txt  package.xml
(+449 files in other folders)
